# python-seawater

./: .buildinfo  .coveragerc  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  DISCLAIMER  DISCLAIMER.txt  LICENSE.CSIRO  MANIFEST  MANIFEST.in  PKG-INFO  README  README.html  README.md  README.rst  README.txt  THANKS.txt  eos80.html  extras.html  genindex.html  geostrophic.html  index.html  library.html  objects.inv  py-modindex.html  pyproject.toml  readme_link.html  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  setup3.py
.github/workflows/: tests.yml  (+2 more)
_sources/: eos80.rst.txt  index.rst.txt  library.rst.txt
_static/: documentation_options.js
ci/: before_install.sh
docs/: conf.py  extras.rst  geostrophic.rst  index.rst  library.rst
seawater/: .swp._from_.py  DELTA.mat  DepthPressure.py  DpthPressDist.py  SA_chck_cast.mat  Salinity.py  Temperature.py  __init__.py  _from_.py  constants.py  csiro.py  derived_prop.mat  dsa.mat  eos80.py  extras.py  geostrophic.py  gibbs-test.py  gibbs.py  gibbs25.py  gibbs_seawater.py  gsw_cv.mat  gsw_cv.pkl  gsw_data_v2_0.pklz  lib.py  library.py  load_test_data.py  norway.py  pt.mat  rho.mat  sea-tmp.py  seawater-tmp.py  seawater.py  temporary_func.py  test-tmp.txt  test.py  tmp  tmp.mat
test/: Endeavor_Cruise-88_Station-64.csv  matlab_test.txt  test_octave.py  test_seawater.py
tests/: Endeavor_Cruise-88_Station-61-64-gvel.csv  Endeavor_Cruise-88_Station-61.csv  Endeavor_Cruise-88_Station-64.csv  test_input_shapes.py  test_octave.py  test_result_comparison.py
(+187 files in other folders)
